@@ -1,17 +1,17 @@
 Package: hypergea
 Type: Package
 Title: Hypergeometric Tests
-Version: 1.3.3
-Date: 2016-09-09
+Version: 1.3.6
+Date: 2018-01-26
 Author: Markus Boenn
 Maintainer: Markus Boenn <markus.boenn.sf@googlemail.com>
-Description: Performs (exact) hypergeometric tests on IxJ and 2x2x2 contingency tables using parallelised C code.
+Description: Performs (exact) hypergeometric tests on IxJ and 2x2x2 contingency tables using parallelized C code.
 License: GPL (>= 2)
 Depends: R (>= 3.0.0)
 Imports:
 Suggests: RUnit
 SystemRequirements: OpenMP (>=3.0)
 NeedsCompilation: yes
-Packaged: 2016-09-09 17:51:46 UTC; mb61pezy
+Packaged: 2018-01-26 12:26:16 UTC; mb61pezy
 Repository: CRAN
-Date/Publication: 2016-09-10 18:02:55
+Date/Publication: 2018-01-26 13:24:17 UTC
