@@ -1,20 +1,21 @@
-241407138d3c746eb8fecf4b985fd339 *DESCRIPTION
+725e582b07713fcfadc81608f88d4364 *DESCRIPTION
 a49d3396a81641845bc257a8e85e8144 *NAMESPACE
 5688b42144d0c391b9c0fedf1ca84a42 *R/getExpectedValues.R
 1cd7d02250140f5492957a47d6564d5f *R/getMargins.R
 034a99449dbd35ba6d4cd163add0e699 *R/getOddsRatio.R
-3049e2f4c5da49d47306109830378272 *R/hypergea-internal.R
-3d2acd24c01c033d297dfc9240992223 *R/hypergeom.test.R
+1881ed78341565fc5a5623ddc1bef2b8 *R/hypergea-internal.R
+92fa38fcfeaa501e8dcb61f3bd0d97c7 *R/hypergeom.test.R
 384a88df5f3e4e68b2dc8026c15037ef *R/zzz.R
 c2dd8e2f50dfc945e838c0f9efcd7be9 *inst/CITATION
-91ca090f7d4ab0353e6b4bd0cddbfa19 *inst/NEWS.Rd
+436e505c713bf03ff7ac749ea1a1d05b *inst/NEWS.Rd
 7a3ad3ba7cf5f7db6502064ffb91cd25 *inst/tests/test_hypergeom.test.R
 72e1332a57e05a9796727499f83e97c4 *man/getExpectedValues.Rd
 f1b0c92fe4b23424e09b3d5b093b22c3 *man/getMargins.Rd
 584a6fd1acffbf52533db2a330f2e8f7 *man/getOddsRatio.Rd
 7b05db6699166e32f5d64b99c1e56dfe *man/hypergeom.test.Rd
 bf7e140fc030043484ca8d2e096baba8 *src/Makevars
+2916578a708e33f4c862ae76a6fc3ab4 *src/hypergea_init.c
 c6c8dad6c83bb6148c8d082484de8f57 *src/hypergeom_2x2x2.cpp
-b84b9f3ca2e0132ce02fc261fc8375f4 *src/hypergeom_IxJ.cpp
+f93746ac910ab2e0cc6f386b6d7a1c38 *src/hypergeom_IxJ.cpp
 134e5b0a3ec26bb3c6f68f19acfc5b51 *src/lfactorial.c
-e6baff5800d378a574d634c9ec7bba94 *tests/runTests.R
+09e2ebcf9d9d0bd5a128ab0b6108e4f5 *tests/runTests.R
